Advance in the reply to the referee

--- a/paper.tex
+++ b/paper.tex
@@ -69,7 +69,7 @@ Lateral Gradient}
   different samples shows that from one sample we
   could obtain full calibration curves which may be
   used to predict, design, and fabricate more complex
-  non-homogenous multilayered devices with lateral gradients for
+  non-homogeneous multilayered devices with lateral gradients for
   manifold applications.
 \end{abstract}
 %  A variety of optical devices and applications are based on
@@ -115,15 +115,15 @@ materials used for applications in medical implants
 \cite{bai2020bioinspired}.
 Gradients have also been employed for several
 technological applications such as high-yield screening of catalysts,
-sensing materials and biomolecules \cite{maier2007combinatorial, jayaraman2004construction,
+sensing materials and bio-molecules \cite{maier2007combinatorial, jayaraman2004construction,
 potyrailo2008combinatorial}
-Apart from some methods developed by S.E. Fosdick et al \cite{fosdick2010two},
+Apart from some methods developed by S.E. Fosdick et al. \cite{fosdick2010two},
 %[JACS  2010, 132, 9226-9227],
 synthesis of  Ag-Au alloy gradients on steel and chemical composition
 gradients of CdS layers
 on gold electrodes have also been obtained \cite{wang2019fabrication}.
-Among electrochemical methods, compositional and doping density changes
-in  conducting polymers have been used to produce gradients using Indium Tin
+Among electrochemical methods, changes in the composition and doping density
+of  conducting polymers have been used to produce gradients using Indium Tin
 Oxide electrodes \cite{inagi2010bipolar}.
 Electrochemically induced potential gradients have been shown to catalyze the
 reactions and gradient doping of polymers \cite{qin2020bipolar, ishiguro2011gradient}.
@@ -132,17 +132,19 @@ fast and easy approach for the fabrication
 of gradient materials has been the use  of asymmetrical
 electrode configurations in the electrochemical synthesis of porous silicon \cite{sailor2012porous}.
 This technique has the additional advantage of being compatible
-with very large scale integration (VLSI) devices and integrable with microelectronics.
+with very-large-scale-integration (VLSI) devices that may be
+integrated in  microelectronic circuits.
 
 Although porous silicon (PS) initially stimulated the interest of the scientific
-community due to its photoluminescence in the visible range at room
+community due to its photo-luminescence in the visible range at room
 temperature, it has presently
 been recognized as a multifaceted optical material due to its large surface
-area, biocompatibility, ease of fabrication and tunable refractive index.
+area, bio-compatibility, ease of fabrication and tunable refractive index.
 Applications based on porous silicon now cover various fields such as
 chemical sensors and biosensors \cite{kumar2020porous},
-microelectronics and micromechanical systems (MEMS) \cite{martinez2016dual},as well as a
-range of optical \cite{estevez2014porous} and optoelectronic applications
+microelectronics and micro-mechanical systems (MEMS)
+\cite{martinez2016dual}, as well as a
+range of optical \cite{estevez2014porous} and opto-electronic applications
 \cite{ramadan2020fabrication}. Specifically,
 the temporal variation of the current density results in a variation of
 porosity along the depth, allowing the easy fabrication of different kinds
@@ -165,20 +167,20 @@ applications have been found for the resulting structures
 \cite{sailor2012porous, collins2002determining} applied it
 for the determination of protein size.
 Additionally, a variation in pH of the solution could gate the
-trapping/release of biomolecules at regions with different porosity, a
+trapping/release of bio-molecules at regions with different porosity, a
 result potentially useful for drug delivery
-applications given the biocompatible nature of PS.
+applications given the bio-compatible nature of PS.
 A similar asymmetric electrode configuration was used to fabricate
 multilayered optical filters with lateral a gradient
 \cite{li2005painting} and
 for developing ethanol sensors \cite{sailor2012porous}.
 Additionally, it has been shown that the combination of thermal  oxidation  and
-infiltration of TiO2  by atomic layer deposition allows the manufacture
+infiltration of TiO$_2$  by atomic layer deposition allows the manufacture
 of transparent GRIN
 optical elements with a high refractive index contrast \cite{ocier2017tunable}.
 Kruger et al. \cite{krueger2018electrochemical} used
 a porous silicon 1D GRIN structure infiltrated with polymer to
-synthesize flat microlens arrays.
+synthesize flat micro-lens arrays.
 Recently, J Wang et al. has shown the fabrication of
 a miniature spectrometer with a PS based rugate filter using a
 radial interfacial potential distribution \cite{wang2019fabrication}
@@ -328,7 +330,7 @@ Here, $\delta^{(D)}$ is Dirac's delta function in $D$ dimensions.
 This problem may be solved readily using image charge theory \cite{jackson1975classical}.
 The potential within the electrolytic cell coincides
 within the region $0\le x\le a$, $0\le y \le b$, $0\le z\le c$
-with that within an infinite fictitious empty space but for the point charge
+with that within an infinite fictitious space  empty but for the point charge
 $q_0$ at the tip of the electrode at $\bm r_0$, and an array of its fictitious image
 charges situated out of the cell. They include an image on the conducting bottom of the
 cell, of the opposite charge $-q_0$ and situated at $(x_0, y_0,-z_0)$,
@@ -410,7 +412,7 @@ using the Ewald summation technique
 two rapidly converging series, one in real space and another one in reciprocal space.
 Nevertheless, as we need the potential and the field to obtain the
 current density on the surface of the sample on which  no
-real nor image charges lie, we may perform a somewhat simpler planewise
+real nor image charges lie, we may perform a somewhat simpler plane-wise
 summation, where we first obtain the potential and field produced by a
 simple periodic lattice of charges using a fast convergent sum over
 the two dimensional (2D)
@@ -421,7 +423,7 @@ of the 2D {\em crystal} plane, and finally sum over all the
 planes.
 
 We consider first a system made of identical {\em unit} charges
-ocuppying the positions $\bm R$ of a 2D Bravais lattice $\{\bm R\}$,
+occupying the positions $\bm R$ of a 2D Bravais lattice $\{\bm R\}$,
 which we will take as a rectangular lattice with lattice parameters
 $2a$ and $2b$, and lying, for the time being, at the $z=0$ plane.
 The potential $\phi$ it produces obeys
@@ -470,12 +472,12 @@ the source plane. Substituting into Eq. \eqref{eq:phifourier} yields
  \phi(\bm r) = -\frac{2 \pi}{A}  \abs{z} +{\sum_{\bm G}}' \frac{2 \pi
    }{AG} e^{- G \abs{z}} e^{i \bm G\cdot\bm r_\|},
  \end{eqnarray}
-where the prime indicates that the term $G=0$ should be ommited from
+where the prime indicates that the term $G=0$ should be omitted from
 the sum.
 
 We consider now the basis of our 2D lattice, with equal charges at the
 four positions $(\pm x_0, \pm y_0,0)$. Each of the corresponding four
-sublattices produces a potential as that in Eq. \eqref{eq:phiG1} but
+sub-lattices produces a potential as that in Eq. \eqref{eq:phiG1} but
 shifted by the corresponding basis vector, yielding
 \begin{equation}
   \label{eq:phiG4}
@@ -555,7 +557,7 @@ properties.
     the fabrication of GRIN PS structures. We show a side view of the
     electrochemical cell with the shape of a
     rectangular prism. We indicate the Si wafer (dark
-    gray), the teflon cell (light gray), the sealing o-ring (black
+    gray), the Teflon cell (light gray), the sealing o-ring (black
     circles), the insulated feeding cable (white lines within black
     lines), the uncovered platinum tip (white) within the
     electrolyte (blue), the electrical contact below the sample
@@ -586,7 +588,7 @@ of the resulting pores.
 Single layer PS structures were fabricated through electrochemical
 anodization of (100) oriented $p$-type crystalline Si wafer
 (resistivity 0.002 - 0.005 $ \Omega\,\text{cm}$), under galvanostatic
-conditions. The process was performed at room temperatured with an
+conditions. The process was performed at room temperature with an
 electrolytic mixture of aqueous hydrofluoric
 acid (HF) (concentration 48\% wt), glycerol (purity 99.8 \% wt) and
 ethanol (purity 99.9\% wt) in a 3:7:1 volume ratio.
@@ -597,7 +599,7 @@ sides $a=2.01\,\text{cm}$ and $b=1.48\,\text{cm}$, with an uncovered sample area
 of about $3\,\text{cm}^2$. The height of the liquid was set at
 $c=1\,\text{cm}$. The cathode was a
 platinum wire with a diameter of $0.41\,\text{mm}$ insulated with
-teflon tape, with an uncovered
+Teflon tape, with an uncovered
 tip located at $\bm r_0=(x_0,
 y_0,z_0)=(0.2\,\text{cm},0.74\,\text{cm},0.9\,\text{cm})$.
 We manufactured three samples $S_1$, $S_2$ and $S_3$ by applying a
@@ -608,7 +610,7 @@ $I_3=20\,\text{mA}$, respectively, during a time of $t=250s$.
 \label{sec:refl-meas}
 We measured the absolute reflectance at different positions over our
 samples using Universal reflectance accessory  equipped {\em Perkin Elmer Lambda 950}
-ultraviolet-visible-near infrared (UV-Vis-NIR) spectrophotometer, with a rectangular spot size of
+ultraviolet-visible-near infrared (UV-Vis-NIR) spectro-photometer, with a rectangular spot size of
 $0.7\text{mm}\times2.0\text{mm}$, a slit width of $0.6\text{mm}$ in
 a wavelength range from $300\text{nm}$ to
 $1400\text{nm}$.
@@ -624,7 +626,7 @@ an air environment  (0), the PS film (1) and the crystalline Si (c-Si) substrate
 where $r_{01}$ and $r_{12}$ are the Fresnel reflectance
 coefficients of the air/PS and PS/c-Si interfaces \cite{sattler2017silicon}
 and $\psi=k_1^\perp d$, where $k_1^\perp$ is
-the component of the wavevector perpendicular to the surface within
+the component of the wave-vector perpendicular to the surface within
 the porous layer of thickness $d$. The reflectance depends on the
 thickness of the film and on the index of refraction $n_1=n_{\text{PS}}$ of the porous
 layer, which we relate to the porosity through Bruggeman's
@@ -635,7 +637,7 @@ effective medium theory \cite{theiss1997optical},
   {\epsilon_2+\epsilon_1}=0,
 \end{equation}
 where $\epsilon_2=\epsilon_{\text{Si}}$ is the dielectric function of
-the c-Si substrate, and
+the c-Si substrate and
 $\epsilon_1=n_{\text{PS}}^2$ is the dielectric function of the PS layer.
 We fitted the reflectance spectra using the porosity $p$ and the
 thickness $d$ and a scale calibration factor $s$ as fitting
@@ -653,7 +655,7 @@ cross-sectional) was observed with a {\em Hitachi SU1510} scanning electron micr
 
 % the thickness  and porosity  of each fabricated  film was measured.
 
-\section{Discussion and Results}
+\section{Results and Discussion}
 \label{sec:discussion-results}
 \subsection{Current Density}
 \label{sec:current-density}
@@ -666,7 +668,7 @@ cross-sectional) was observed with a {\em Hitachi SU1510} scanning electron micr
   \caption{Normalized current density $j_\perp(x,y,0)/I$ for a system
     as in Figs. \ref{f:celda} and \ref{fig:DE1} for a cell of
     length $a = 2.01\,\text{cm}$ and width $b=1.48\,\text{cm}$, with
-    the surface of the electrolyte at a heigth $c=1.0\,\text{cm}$, with a
+    the surface of the electrolyte at a height $c=1.0\,\text{cm}$, with a
     point-like electrode at $\bm r_0=(0.2\,\text{cm},
     0.74\,\text{cm},0.9\,\text{cm})$,  calculated through
     Eq. (\ref{Eq:J}) along the center line
@@ -690,7 +692,7 @@ the electrode.
   \caption{ Photograph of sample $S_3$ prepared as described in
     Sec. \ref{sec:fabrication-ps-grin} using the same parameters as
     in Fig. \ref{fig:DR1} with a current $ I_3=20 \text{mA}$,
-    during a time $t=250\text{s}$. We indicate the centerline with a
+    during a time $t=250\text{s}$. We indicate the center-line with a
     dashed line and eight regions $x_i$
     $(i=1, 2,...8)$ centered at positions,
     $x'_1=0.2\text{cm}$,  $x'_2=0.4\text{cm}$, $x'_3=0.6\text{cm}$,
@@ -720,18 +722,25 @@ Fig. \ref{fig:DE1}) and towards which the current leaks from the
 neighborhood of the wall. The width of this region is
 $w=0.14\,\text{cm}$. Thus, we may expect our formula \eqref{Eq:J}
 to {\em fail} within that region and close to the border, at distances of the order of the radius
-of the cross-section of the o-ring, about a milimeter. The
+of the cross-section of the o-ring, about a millimeter. The
 figure shows eight positions
 $x'_n=0.2\,\text{cm},0.4\,\text{cm},\ldots,1.6\,\text{cm}$ on which we
 measured the near normal incidence reflection spectra of the
 sample. Here, we defined $x'_n=x_n+w$ as the distance to the edge of
-the etched sample, determined by the position of the sealing o-ring,
+the etched sample, which corresponds to the position of the sealing o-ring,
 whereas $x_n$ is the corresponding distance to the wall of the
 cell.
 
 From Eq. \eqref{Eq:J} we evaluate the
 normalized current density $j_\perp/I$ expected at the positions $n$ indicated in
-Fig. \ref{fig:SI3}.
+Fig. \ref{fig:SI3}. We included an estimated uncertainty in the
+distance to the wall of the cell, and the corresponding (asymmetrical)
+uncertainty in the computed current density. This
+uncertainty arises from the uncontrolled deformation of the o-ring as
+it is pressed against the wafer to seal in the electrolyte, so that
+its distance to the wall of the cell is ill defined, and we estimate
+it as the radius of the o-ring. \notaL{Would it be a good idea to use a
+  larger uncertainty? 1mm? The beam spot is 2mm wide.}
 (Table \ref{t:xj}).
 \begin{table}
   \centering
@@ -756,7 +765,7 @@ Fig. \ref{fig:SI3}.
 In Fig. \ref{fig:sem} we show some SEM images of the sample $S_3$,
 including top views and lateral views taken after
 the optical characterization was completed and the sample was cut
-along its centerline (see Sec. \ref{sec:R}) from
+along its center-line (see Sec. \ref{sec:R}) from
 three regions around the left side, the center, and the right side
 of the sample shown in Fig. \ref{fig:SI3}.
 \begin{figure}
@@ -770,7 +779,7 @@ of the sample shown in Fig. \ref{fig:SI3}.
   \caption{Top ((a), (b), and (c)) and lateral ((d), (e), and (f)) SEM
     micrographs of the sample $S_3$ taken from a region corresponding to the left
     side ((a) and (d)), center ((b) and (e)), and right side ((c) and
-    (f)) along the centerline shown in Fig. \ref{fig:SI3}.}
+    (f)) along the center-line shown in Fig. \ref{fig:SI3}.}
   \label{fig:sem}
 \end{figure}
 We confirm that as we move away from the electrode, the pore
@@ -828,8 +837,8 @@ Figs. \ref{fig:R5}, \ref{fig:R10}, and \ref{fig:R20}.
 We fitted the reflectance measurements using Eqs. \eqref{Eq:ECMR} and
 \eqref{Eq:Brugg} using the local porosity $p$, and the thickness of the
 film  $d$ as
-adjustable parameters. We also fitted a scaling parameter $s$ to allow
-for calibration variations among spectra. From the thickness we
+adjustable parameters. To that end we used the {\tt migrad} routine of
+the {\tt Minuit} minimization software. From the thickness we
 obtained the etching rate $v=d/t$ at each position. Notice that the fits are reasonably
 good. The contrast of the reflectance in the experiment is somewhat smaller
 than in our fitted curves. We believe this is due to the finite width
@@ -846,61 +855,62 @@ towards the left side of Fig. \ref{fig:SI3} and for smaller
 wavelengths.
 
 The results obtained from the reflectance fits are summarized in table
-\ref{t:jpdv}. Notice that the scaling parameters are close to 1,
-showing that the calibration was adequate.
-
+\ref{t:jpdv}.
 \begin{table}
 \centering
-\begin{tabular}{lrrrrrr}
-  Sample/ & position & density & porosity &
-  thickness & scale & rate\\
-  $I$ (mA) &$x'_n$ (cm)&  $j$ ($\text{mA}/\text{cm}^2$) & $p$
-       & $d$ ($\mu\text{m}$) & $s$ & $v$ (nm/s)\\
+\renewcommand{\arraystretch}{1.1}
+\begin{tabular}{lrrrrr}
+  Sample & position & density & porosity &
+  thickness & rate\\
+  ($I$ (mA)) &$x'_n$ (cm)&  $j$ ($\text{mA}/\text{cm}^2$) & $p$
+       & $d$ ($\mu\text{m}$) & $v$ (nm/s)\\
 \hline
-$S_1$/ 5 &0.2 & 3.61 & 0.494 & 0.340 & 0.849&  1.361 \\
-         &0.4 & 3.36 & 0.571 & 0.390 & 0.979&  1.558  \\
-         &0.6  & 2.88& 0.566 & 0.331 & 0.957&  1.325 \\
-         &0.8 & 2.32 & 0.556 & 0.273 & 0.954&  1.093 \\
-         &1.0 & 1.80 & 0.559 & 0.227 & 0.995&  0.894 \\
-         &1.2 & 1.37 & 0.556 & 0.189 & 0.973&  0.754 \\
-         &1.4 & 1.06 & 0.549 & 0.151 & 0.961&  0.605 \\
-         &1.6 & 0.83 & 0.552 & 0.124 & 0.990&  0.495 \\
-$S_2$/10 &0.2 & 7.22 & 0.591 & 0.635 & 0.856&  2.539 \\
-         &0.4 & 6.72 & 0.644 & 0.693 & 0.991&  2.774 \\
-         &0.6 & 5.77 & 0.638 & 0.591 & 0.952&  2.363 \\
-         &0.8 & 4.64 & 0.626 & 0.533 & 0.980&  2.131 \\
-         &1.0 & 3.60 & 0.599 & 0.459 & 0.939&  1.835 \\
-         &1.2 & 2.75 & 0.590 & 0.404 & 0.945&  1.618 \\
-         &1.4 & 2.11 & 0.575 & 0.338 & 0.936&  1.351 \\
-         &1.6 & 1.67 & 0.571 & 0.296 & 0.948&  1.183 \\
-$S_3$/20 &0.2 &14.45 & 0.686 & 1.204 & 1.149&  4.818 \\
-         &0.4 & 13.44 & 0.713 & 1.193 & 1.078&  4.772 \\
-         &0.6 & 11.54 & 0.703 & 1.044 & 1.059&  4.177 \\
-         &0.8 &  9.29 & 0.626 & 0.752 & 1.006&  3.006 \\
-         &1.0 &  7.20 & 0.625 & 0.538 & 1.010&  2.152  \\
-         &1.2 &  5.50 & 0.593 & 0.439 & 0.962&  1.755 \\
-         &1.4 &  4.22 & 0.584 & 0.363 & 0.962&  1.453 \\
-         &1.6 &  3.33 & 0.591 & 0.339 & 1.011&  1.357 \\
+$S_1$(5) &0.2 &$ 3.61^{+0.014}_{-0.03}  $&$0.562\pm0.031$ &$0.381\pm0.021$ &$   1.524\pm0.084$ \\
+         &0.4 &$ 3.36^{+0.09}_{-0.11}   $&$0.588\pm0.019$ &$0.403\pm0.014$ &$  1.611\pm0.057$  \\
+         &$0.6$  &$ 2.88^{+0.13}_{-0.14}$&$0.582\pm0.024$ &$0.342\pm0.015$ &$   1.366\pm0.060$ \\
+         &$0.8$ &$ 2.32^{+0.14}_{-0.14} $&$0.566\pm0.022$ &$0.278\pm0.011$ &$  1.113\pm0.044$ \\
+         &$1.0$ &$ 1.80^{+0.13}_{-0.12} $&$0.561\pm0.021$ &$0.224\pm0.009$ &$  0.897\pm0.034$ \\
+         &$1.2$ &$ 1.37^{+0.10}_{-0.09} $&$0.561\pm0.019$ &$0.190\pm0.007$ &$  0.761\pm0.027$ \\
+         &$1.4$ &$ 1.06^{+0.07}_{-0.06} $&$0.556\pm0.018$ &$0.153\pm0.005$ &$  0.611\pm0.021$ \\
+         &$1.6$ &$ 0.83^{+0.05}_{-0.04} $&$0.556\pm0.016$ &$0.124\pm0.004$ &$  0.497\pm0.016$ \\
+$S_2$(10) &$0.2$ &$ 7.22^{+0.03}_{-0.07} $&$0.635\pm0.040$ &$0.686\pm0.054$ &$  2.744\pm0.216$ \\
+         &$0.4$ &$ 6.72^{+0.02}_{-0,21} $&$0.644\pm0.018$ &$0.694\pm0.025$ &$  2.777\pm0.101$ \\
+         &$0.6$ &$ 5.77^{+0.27}_{-0.28} $&$0.640\pm0.033$ &$0.592\pm0.037$ &$  2.368\pm0.149$ \\
+         &$0.8$ &$ 4.64^{+0.28}_{-0.28} $&$0.624\pm0.034$ &$0.530\pm0.034$ &$  2.118\pm0.138$ \\
+         &$1.0$ &$ 3.60^{+0.25}_{-0.23} $&$0.612\pm0.030$ &$0.470\pm0.027$ &$  1.879\pm0.107$ \\
+         &$1.2$ &$ 2.75^{+0.19}_{-0.18} $&$0.603\pm0.034$ &$0.414\pm0.026$ &$  1.658\pm0.104$ \\
+         &$1.4$ &$ 2.11^{+0.14}_{-0.13} $&$0.594\pm0.028$ &$0.350\pm0.018$ &$  1.401\pm0.073$ \\
+         &$1.6$ &$ 1.67^{+0.10}_{-0.09} $&$0.583\pm0.024$ &$0.302\pm0.014$ &$  1.207\pm0.054$ \\
+$S_3$(20) &$0.2$ &$14.45^{+0.06}_{-0.14} $&$0.688\pm0.019$ &$1.208\pm0.047$ &$  4.834\pm0.188$ \\
+         &$0.4$ &$ 13.44^{+0.35}_{-0.41}$&$0.718\pm0.024$ &$1.205\pm0.057$ &$  4.820\pm0.228$ \\
+         &$0.6$ &$ 11.54^{+0.53}_{-0.55}$&$0.706\pm0.027$ &$1.050\pm0.058$ &$  4.199\pm0.232$ \\
+         &$0.8$ &$  9.29^{+0.57}_{-0.55}$&$0.636\pm0.063$ &$0.766\pm0.088$ &$  3.063\pm0.354$ \\
+         &$1.0$ &$  7.20^{+0.49}_{-0.47}$&$0.626\pm0.035$ &$0.540\pm0.037$ &$  2.158\pm0.147$  \\
+         &$1.2$ &$  5.50^{+0.38}_{-0.36}$&$0.606\pm0.043$ &$0.449\pm0.035$ &$  1.797\pm0.140$ \\
+         &$1.4$ &$  4.22^{+0.28}_{-0.26}$&$0.593\pm0.026$ &$0.369\pm0.018$ &$  1.478\pm0.071$ \\
+         &$1.6$ &$  3.33^{+0.19}_{-0.17}$&$0.590\pm0.022$ &$0.338\pm0.014$ &$  1.352\pm0.057$ \\
 \end{tabular}
 \caption{\label{t:jpdv}
-  Current density and fitted parameters for saveral positions on
-  three samples:  porosity, thickness, scale factor and etching rate.}
+  Current density and fitted parameters for several positions on
+  three samples:  porosity, thickness, and etching rate.}
 \end{table}
+The uncertainties in the fitted parameters $p$, $d$, and $v$ were
+chosen as those that increase the sum of squared errors by 10\% with
+respect to its minimum value.
 
 From the data in Table \ref{t:jpdv} we can plot the fitted porosity vs.
-the calculated density current, as shown for our three
+the calculated density current $\j_\perp$, as shown for our three
 samples in Fig. \ref{fig:p}.
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{pvsjerr}
   \caption{Porosity vs. current density for the three samples
-    $S_1$, $S_2$, $S_3$. The data points for each sample are joined by
-    thick lines. The arrows point to data that correspond to
-    position $x'_1=0.2\,\text{cm}$, joined to the other data by thin
-    lines (see text). We include linear fits of the form
-    $p=mj_\perp+b$ to the data from
-    sample $S_3$ (thick straight line, with parameters $m=0.0134$ and
-    $b=0.5288$) and to that from all the samples (thin straight line). }
+    $S_1$, $S_2$, $S_3$. The arrows point to data that correspond to
+    position $x'_1=0.2\,\text{cm}$ (see text). We include a linear fit of the form
+    $p=mj_\perp+b$ with parameters
+    $m=(0.0122\pm0.001)\frac{\text{cm}^2}{\text{mA}}$ and
+    $b=0.551\pm.005$.
+    }
   \label{fig:p}
 \end{figure}
 Notice that for each sample the data points lie around straight lines,
@@ -909,19 +919,21 @@ $x'_1$. As discussed in Sec. \ref{sec:ps-grin-single}, those points
 were very close to a wall of the electrolytic cell, so they were
 affected by leakage currents towards the underside of the wall.
 For this reason, we exclude those points from the following
-analysis. We made a linear fit of the form $p=mj_\perp+b$ to the data from sample $S_3$ and to
-the data from the three samples. A comparison shows that a fit to the
-data of just one sample, $S_3$, turns out to be a reasonable predictor for the
-porosity of all the samples.  From that fit we obtain that for our
-preparation conditions
+analysis. We made a linear fit of the form $p=mj_\perp+b$ obtaining
 \begin{equation}\label{eq:p}
-  p\approx 0.013\frac{\text{cm}^2}{\text{mA}} j_\perp+0.53.
+  p\approx (0.0122\pm0.001)\frac{\text{cm}^2}{\text{mA}} j_\perp+(0.551\pm.005).
 \end{equation}
-The discrepancies may be due to the ill definition of the edge of the
-sample (the position of the sealing o-ring) with respect to which we
-measured the position of the illuminating spot. A rigid displacement along
-$x$ yields mostly a horizontal shift of the results shown in
-Fig. \ref{fig:p} and that can bring them into closer agreement.
+Thought the fit is reasonably good, it is noticeable that most of the data from
+sample $S_2$ lie to the left of the fitted line while most of the data
+from the other samples lie to the right. This discrepancies may be due
+to the uncertainty in the positions $x_n$ (see Table \ref{t:xj}) due
+to the ill defined distance from the edge of the sample (which roughly
+corresponds to the position of the o-ring) to the edge of the cell. A
+deformation of the o-ring when the cell is pressed against the wafer
+would be equivalent to a rigid shift of the sample, i.e., to adding a
+constant to all the positions $x_n$. Thus it is likely that the sign
+and magnitude of that uncontrolled constant displacement changes among
+samples.
 
 Similarly, we can plot the fitted etching rate vs.
 the calculated density current, as shown for our three
@@ -930,29 +942,28 @@ samples in Fig. \ref{fig:v}.
   \centering
   \includegraphics[width=\textwidth]{vvsjerr}
   \caption{Etching rate vs. current density for three samples
-    $S_1$, $S_2$, $S_3$. The data points for each sample are joined by
-    thick lines. The arrows point to data that correspond to
-    position $x'_1=0.2\,\text{cm}$, joined to the other data by thin
-    lines (see text). We include linear fits of the form
-    $v=mj_\perp+b$ to the data from
-    sample $S_3$ (thick straight line, with parameters $m=0.3543$,
-    $b=0.0924$) and to that from all the samples (thin straight line). }
+    $S_1$, $S_2$, $S_3$. The arrows point to data that correspond to
+    position $x'_1=0.2\,\text{cm}$ (see text). We include a linear fit of the form
+    $v=mj_\perp+b$ to the data with parameters $m=(0.312\pm
+    0.017)(\text{cm}^2/\text{mA})(\text{nm/s})$ and
+    $b=(0.44\pm0.09)\text{nm/s}$. }
   \label{fig:v}
 \end{figure}
-As for the porosity, there are outlier points corresponding to the
-immediate proximity of the wall of the cell, but the remaining points
-lie on straight lines for each sample, and they
-may all be approximated by a linear fit to the data of just one
-sample, $S_3$, from which we get
+As for the porosity, excluding the points in the
+immediate proximity of the wall of the cell, the remaining points
+lie roughly on straight lines for each sample, and they
+may all be approximated by a linear fit to all the data, from which we get
 \begin{equation}\label{eq:v}
-  v\approx 0.35\frac{\text{cm}^2}{\text{mA}}
-  \frac{\text{nm}}{\text{s}}j_\perp + 0.092\frac{\text{nm}}{{s}}.
+  v\approx (0.312\pm0.017)\frac{\text{cm}^2}{\text{mA}}
+  \frac{\text{nm}}{\text{s}}j_\perp + (0.44\pm0.09)\frac{\text{nm}}{{s}}.
 \end{equation}
-The discrepancies, as in Fig. \ref{fig:p} might be due to our poor
-definition of our reference position and may be eliminated by
-introducing a rigid displacement along $x$ between the samples. For
-multilayered samples, produced by modulating the current $I$ in time,
-without changing wafers, these error source would be absent.
+Similarly to
+Fig. \ref{fig:p}, most data from sample $S_2$ lies to the left of the
+fitted line and most of the data from $S_1$ and $S_3$  lie to the
+right, which could be similarly explained and corrected.
+These corrections are different for layers grown on different samples,
+but for a multilayered system, produced by modulating the current $I$ in
+time, a single correction ought to be enough for all the layers.
 
 Using Eqs.  \eqref{Eq:ECMR}-\eqref{eq:v} we can calculate the
 reflectance spectra for any
@@ -961,7 +972,7 @@ illustrated in Fig. \ref{fig:Rvsjl} for the parameters that correspond
 to our samples.
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{jlr}
+  \includegraphics[width=\textwidth]{jlrb}
   \caption{Reflection $R$ of a PS film as a function of the current density
     current $j_\perp$ and wavelength $\lambda$ for an etching time
     $t=250\,\text{s}$. Theory (left panel) and experiment (right
@@ -976,15 +987,14 @@ Figs. \ref{fig:R5}- \ref{fig:R20}, ordered according to the
 corresponding current density as presented in Table
 \ref{t:jpdv}. Nevertheless, for the reasons mentioned above, we
 eliminated the data corresponding to position $x'_1$ on all
-samples. Furthermore, as the results corresponding to sample $S_2$ in
-Figs. \ref{fig:p} and  \ref{fig:v} seem shifted with respect to those
-of the other samples, in order to facilitate the visualization of the
-results, we artificially shifted horizontally towards the
-right their contributions to Fig. \ref{fig:Rvsjl} by
-$1\,\text{mA}/\text{cm}^2$. Notice that the experimental results may
-be grouped along bright and dark bands and that they correspond closely to
+samples. Furthermore, as discussed above and for visualization
+purposes we applied small rigid translations to the samples along the
+$x$ direction, thereby modifying $j_\perp$, before patching together
+the reflectance spectra.
+Notice that the experimental results may
+be grouped along bright and dark bands that correspond closely to
 those expected theoretically, though the experimental bands are somewhat shifted,
-especially for low current densities, and the minima are not as low.
+especially for low current densities, and their minima are not as low.
 
 The theoretical reflectance could as well be calculated using Eqs.
 \eqref{Eq:Brugg}-\eqref{eq:v} and a transfer matrix approach for more
@@ -999,40 +1009,44 @@ By choosing a simple geometry for our electrochemical cell, namely, a
 rectangular prism, and employing a point-like electrode, we were able
 to derive an expression for the calculation of the electric current
 density along the surface of a Si sample. The expression was obtained
-by using image charge theory and a planewise summation of Coulomb
+by using image charge theory and a plane-wise summation of Coulomb
 potentials in 2D reciprocal space, and it is made up of
 a rapidly converging sum of analytical terms, just a few of which
-should be kept. This allows the characterization
+need be kept. This allows the characterization
 of the porosity of a PS layer and the etching
 rate for different values of the etching current density by making
 optical measurements on several positions of just a
 few samples. We illustrated the procedure with three samples on each of which we
 measured reflectance spectra at eight different positions.
-Through a optimization procedure we fitted the porosity and etching
-rate corresponding to each current density.
-We showed that an analysis of the data of just one of the samples, which we chose
-as that with the largest current density range, yielded calibration
-curves that allow the approximate prediction of the properties of the other
-samples. We believe that the discrepancies we found between samples
-are due to difficulties in defining a common reference position and
-may be eliminated through a rigid shift along the $x$ direction.
-The calibration curves can be used to design and calculate the optical
+Through an optimization procedure, we fitted the porosity and etching
+rates corresponding to each current density. We used these data to
+obtain calibration curves that allow the approximate prediction of the
+properties of porous Si samples prepared with a current density that
+spans a range of more than one order of magnitude. The
+small discrepancies we found between our samples and the fit
+are probably due to our unfortunate choice of reference point for
+measuring positions, as we used as reference the ill defined edge of
+the sample, while the important reference for our calculation is the
+edge of the wall of the electrolytic cell. Nevertheless, these
+discrepancies are reduced through a rigid shift of the coordinates
+$x_n$ used in the analysis. Our calibration curves can be used to
+design and calculate the optical
 properties of other systems prepared under similar conditions, such as
-multilayered GRIN systems from which photonic crystals, microcavities
-and sensors with position dependent properties. This is the subject of
+multilayered GRIN systems from which photonic crystals, micro-cavities
+and sensors with position-dependent properties. This is the subject of
 ongoing work. As the etching rate for the formation of porous silicon
 and the resulting porosity are very sensitive to the growth conditions
 and to the properties of the substrate, such as its doping,
 there are no universal calibration curves. Thus, it is useful to have
-a procedure that from just one sample can produce calibration curves
-that may be employed for other samples grown in the same conditions.
+a procedure that from just one or a few samples can produce calibration curves
+that may be employed for other samples grown under similar conditions.
 
 \section*{Acknowledgments}
 \label{sec:acknowledgments}
 CAOD is grateful for a scholarship from CONACyT and to
 V. Castillo-Gallardo and L.E. Puente Díaz for useful discussions. VA acknowledges support
 from CONACyT Basic Sciences project A-S1 30393 and from PRODEP, and is
-grateful to ICF where she spent a sabatical.
+grateful to ICF where she spent a sabbatical.
 WLM acknowledges the support of DGAPA-UNAM under grant
 IN111119.
 
